fixed mobile overflow div / sideProjects

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -65,8 +65,8 @@
 
 .tags {
   pointer-events: none;
-  padding: 5px 10px;
-  margin-right: 10px;
+  padding: 0px 10px;
+  margin: 5px 10px 5px 0px;
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
   background-color: transparent;
